refactor(general): Realizando ajustes do padrão do projeto.